in the middle of skills

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <h3 class="home__subtitle">
                             Fullstack Web Developer
                         </h3>
-                        <p class="home__description">Please Hire ME!</p>
+                        <p class="home__description">I'm trynna get my dick sucked.</p>
                         <a href="#contact" class="button button--flex">
                             Contact Me <i class="uil uil-message button__icon"></i>
                         </a>  
@@ -139,14 +139,239 @@
 
             <!--==================== ABOUT ====================-->
             <section class="about section" id="about">
+                <h2 class="section__title">
+                    About Me
+                </h2>
+                <span class="section__subtitle">My introduction</span>
 
-        
+                <div class="about__container container grid">
+                    <img src="assets/img/why.PNG" alt="" class="about__img">
+                    <div class="about__data">
+                        <p class="about__description">
+                            A Full Stack Web Developer, interested in acquiring an 
+                            internship and/or entry-level position at a company in order to 
+                            jump start my career in this field. My goal is to showcase my 
+                            experience to develop user-friendly applications utilizing ingenuity, critical thinking, problem-solving and logic. Recognized by colleagues and staff members for being a team player that contributes greatly to any project, programs from start to finish. 
+                        </p>
+                        <div class="about__info">
+                            <div>
+                                <span class="about__info-title">
+                                    0
+                                </span>
+                                <span class="about__info-name">
+                                    Years <br> experience
+                                </span>
+                            </div>
+
+                            <div>
+                                <span class="about__info-title">
+                                   20+
+                                </span>
+                                <span class="about__info-name">
+                                   Completed <br> projects
+                                </span>
+                            </div>
+
+                            <div>
+                                <span class="about__info-title">
+                                    0
+                                </span>
+                                <span class="about__info-name">
+                                    Companies <br> worked
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class="about__buttons">
+                            <a download ="" href="assets/pdf/USMAN CHAUDHRY RESUME 2021.pdf" class="button button--flex">
+                               Download Resume <i class="uil uil-download-alt"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <!--==================== SKILLS ====================-->
             <section class="skills section" id="skills">
+                <h2 class="section__title">
+                    skills
+                </h2>
+                <span class="section__subtitle">
+                    My technical level
+                </span>
+                    <div class="skills__container container grid">
+                        <div>
+                             <!--==================== SKILLS 1 ====================-->
+                             <div class="skills__content">
+                                 <div class="skills__header">
+                                    <i class="uil uil-brackets-curly skills__icon"></i>
 
 
+                                    <div>
+
+                                        <h1 class="skills__title">Frontend Developer</h1>
+                                        <span class="skills__subtitle">More than 4 Years</span>
+                                    </div>
+
+
+                                    <i class="uil uil-angle-down skills__arrow"></i>
+
+                                 </div>
+
+                                 <div class="skills__list grid">
+                                     <div class="skills__data">
+                                         <div class="skills__titles">
+                                             <h3 class="skills__name">HTML </h3>
+                                             <span class="skills__number">90%</span>
+                                         </div>
+                                         <div class="skills__bar">
+                                             <span class="skills__percentage skills__html"></span>
+                                         </div>
+                                     </div>
+
+                                     <div class="skills__data">
+                                        <div class="skills__titles">
+                                            <h3 class="skills__name">CSS </h3>
+                                            <span class="skills__number">80%</span>
+                                        </div>
+                                        <div class="skills__bar">
+                                            <span class="skills__percentage skills__css"></span>
+                                        </div>
+                                    </div>
+
+                                    <div class="skills__data">
+                                        <div class="skills__titles">
+                                            <h3 class="skills__name">JavaScript </h3>
+                                            <span class="skills__number">60%</span>
+                                        </div>
+                                        <div class="skills__bar">
+                                            <span class="skills__percentage skills__js"></span>
+                                        </div>
+                                    </div>
+
+                                    <div class="skills__data">
+                                        <div class="skills__titles">
+                                            <h3 class="skills__name">React </h3>
+                                            <span class="skills__number">85%</span>
+                                        </div>
+                                        <div class="skills__bar">
+                                            <span class="skills__percentage skills__react"></span>
+                                        </div>
+                                    </div>
+                                 </div>
+                             </div>
+
+                                <!--==================== SKILLS 2 ====================-->
+                                <div class="skills__content">
+                                    <div class="skills__header">
+                                        <i class="uil uil-server-network skills__icon"></i>
+   
+                                       <div>
+   
+                                           <h1 class="skills__title">Backend Developer</h1>
+                                           <span class="skills__subtitle">More than 2 Years</span>
+                                       </div>
+   
+   
+                                       <i class="uil uil-angle-down skills__arrow"></i>
+   
+                                    </div>
+   
+                                    <div class="skills__list grid">
+                                        <div class="skills__data">
+                                            <div class="skills__titles">
+                                                <h3 class="skills__name">PHP </h3>
+                                                <span class="skills__number">80%</span>
+                                            </div>
+                                            <div class="skills__bar">
+                                                <span class="skills__percentage skills__php"></span>
+                                            </div>
+                                        </div>
+   
+                                        <div class="skills__data">
+                                           <div class="skills__titles">
+                                               <h3 class="skills__name">Node Js </h3>
+                                               <span class="skills__number">70%</span>
+                                           </div>
+                                           <div class="skills__bar">
+                                               <span class="skills__percentage skills__node"></span>
+                                           </div>
+                                       </div>
+   
+                                       <div class="skills__data">
+                                           <div class="skills__titles">
+                                               <h3 class="skills__name">Firebase </h3>
+                                               <span class="skills__number">90%</span>
+                                           </div>
+                                           <div class="skills__bar">
+                                               <span class="skills__percentage skills__firebase"></span>
+                                           </div>
+                                       </div>
+   
+                                       <div class="skills__data">
+                                           <div class="skills__titles">
+                                               <h3 class="skills__name">Python </h3>
+                                               <span class="skills__number">55%</span>
+                                           </div>
+                                           <div class="skills__bar">
+                                               <span class="skills__percentage skills__python"></span>
+                                           </div>
+                                       </div>
+                                    </div>
+                                </div>
+                        </div>
+                        <div>
+                             <!--==================== SKILLS 3 ====================-->
+                             <div class="skills__content">
+                                <div class="skills__header">
+                                    <i class="uil uil-swatchbook skills__icon"></i>
+
+                                   <div>
+
+                                       <h1 class="skills__title">Designer</h1>
+                                       <span class="skills__subtitle">More than 5 Years</span>
+                                   </div>
+
+
+                                   <i class="uil uil-angle-down skills__arrow"></i>
+
+                                </div>
+
+                                <div class="skills__list grid">
+                                    <div class="skills__data">
+                                        <div class="skills__titles">
+                                            <h3 class="skills__name">Figma </h3>
+                                            <span class="skills__number">90%</span>
+                                        </div>
+                                        <div class="skills__bar">
+                                            <span class="skills__percentage skills__figma"></span>
+                                        </div>
+                                    </div>
+
+                                    <div class="skills__data">
+                                       <div class="skills__titles">
+                                           <h3 class="skills__name">Sketch </h3>
+                                           <span class="skills__number">85%</span>
+                                       </div>
+                                       <div class="skills__bar">
+                                           <span class="skills__percentage skills__sketch"></span>
+                                       </div>
+                                   </div>
+
+                                   <div class="skills__data">
+                                       <div class="skills__titles">
+                                           <h3 class="skills__name">Photoshop </h3>
+                                           <span class="skills__number">85%</span>
+                                       </div>
+                                       <div class="skills__bar">
+                                           <span class="skills__percentage skills__photoshop"></span>
+                                       </div>
+                                   </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </section>
 
             <!--==================== QUALIFICATION ====================-->
