--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@
 
                     </div>
 
-                    <p class="footer__copy">&#169; Bedimcode. All rights reserved</p>
+                    <p class="footer__copy">&#169; Usman Chaudhry. All rights reserved</p>
 
                 </div>
 
