some more improvements

--- a/index.html
+++ b/index.html
@@ -718,9 +718,9 @@
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Note Taker</h3>
                                 <p class="portfolio__description">
-                                    Website adaptable too all devices
+                                    Application that can be used to write, save, and delete notes. This application uses express backend and save and retrieve note data from a JSON file.
                                 </p>
-                                <a href="#" class="button button--flex button--small portfolio__button">
+                                <a href="https://mighty-oasis-23376.herokuapp.com/" class="button button--flex button--small portfolio__button">
                                     Demo 
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
