changes to services

--- a/index.html
+++ b/index.html
@@ -598,12 +598,9 @@
                                  </li>
                                  <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I code bruh </p>
+                                    <p>I create ux interactions </p>
                                  </li>
-                                 <li class="services__modal-service">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I beleive in</p>
-                                 </li>
+                                
                              </ul>
                          </div>
                      </div>
@@ -624,26 +621,23 @@
 
                     <div class="services__modal">
                         <div class="services__modal-content">
-                            <h4 class="services__modal-title">Ui/Ux <br> Designer</h4>
+                            <h4 class="services__modal-title">Fullstack <br> Web Developer</h4>
                             <i class="uil uil-times services__modal-close"></i>
 
                             <ul class="services__modal-services grid">
                                 <li class="services__modal-service">
                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                   <p>I develop user interface. </p>
+                                   <p>Able to work backend (server side), and frontend (client side). </p>
                                 </li>
                                 <li class="services__modal-service">
                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                   <p>Web page development </p>
+                                   <p>Variety of skills, including database design. </p>
                                 </li>
                                 <li class="services__modal-service">
                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                   <p>I code bruh </p>
+                                   <p>Create websites and applications, as well as mobile apps </p>
                                 </li>
-                                <li class="services__modal-service">
-                                   <i class="uil uil-check-circle services__modal-icon"></i>
-                                   <p>I beleive in</p>
-                                </li>
+                               
                             </ul>
                         </div>
                     </div>
