More css changes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <div class="nav container">
-                <a href="#" class="nav__logo">Usman</a>
+                <a href="#" class="nav__logo">Usman Chaudhry</a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list grid">
@@ -527,11 +527,12 @@
 
                                 <div class="skills__list grid">
                                     <div class="skills__data">
-                                        <div class="skills__titles">
-                                            <h3 class="skills__name">HTML
-                                            </h3>
-                                            <span class="skills__number"></span>
-                                        </div>
+                                        <ul class="experience__box">
+                                            <li>
+                                                <h2 class="skills__name">Caregiver for Special Needs</h2>
+                                                <h5>Accredited Home Care, Woodland hills, CA | 3/2019 - 5/2020</h5>
+                                                   
+                                            </li>
                                     </div>
                                 </div>
                             </div>
@@ -555,8 +556,15 @@
 
                                     </div>
 
-                                    <div class="skills__list grid">
-                                        <div class="skills__data">
+                                 <div class="skills__list grid">
+                                     <ul class="experience__box">
+                                        <li>
+                                            <h2 class="skills__name">Caregiver for Special Needs</h2>
+                                            <h5>Accredited Home Care, Woodland hills, CA | 3/2019 - 5/2020</h5>
+                                               
+                                        </li>
+                                     </ul>
+                                          <!-- <div class="skills__data">
                                             <div class="skills__titles">
                                                 <h3 class="skills__name">Figma
                                                 </h3>
@@ -587,7 +595,7 @@
                                             <div class="skills__bar">
                                                 <span class="skills__percentage skills__photoshop"></span>
                                             </div>
-                                        </div>
+                                        </div>-->
 
                                     </div>
                                 </div>
