just styling previous employment section

--- a/index.html
+++ b/index.html
@@ -561,7 +561,11 @@
                                         <li>
                                             <h2 class="skills__name">Caregiver for Special Needs</h2>
                                             <h5>Accredited Home Care, Woodland hills, CA | 3/2019 - 5/2020</h5>
-                                               
+                                               <ul class="inside_experience_box">
+                                                <li>
+                                                    <p>a;ljd;ajd;lakjdf;ajdf;ajf;ajd;jf</p>
+                                                </li>
+                                               </ul>
                                         </li>
                                      </ul>
                                           <!-- <div class="skills__data">
